--- a/vignettes/assignment-5.Rmd
+++ b/vignettes/assignment-5.Rmd
@@ -1,11 +1,6 @@
 ---
 title: "Assignment 5"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{assignment-5}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
----
+output: html_document
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
