--- a/vignettes/assignment-5.Rmd
+++ b/vignettes/assignment-5.Rmd
@@ -1,6 +1,11 @@
 ---
 title: "Assignment 5"
-output: html_document
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{assignment-4}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
+---
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
